--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+4.2
+Merged from 4.0:
+Merged from 3.11:
+Merged from 3.0:
+
+
 4.1
  * Add auto_snapshot_ttl configuration (CASSANDRA-16790)
  * List snapshots of dropped tables (CASSANDRA-16843)
