--- a/NEWS.txt
+++ b/NEWS.txt
@@ -51,6 +51,20 @@ restore snapshots created with the previous major version using the
 'sstableloader' tool. You can upgrade the file format of your snapshots
 using the provided 'sstableupgrade' tool.
 
+
+4.2
+===
+
+New features
+------------
+
+Upgrading
+---------
+
+Deprecation
+-----------
+
+
 4.1
 ===
 
