--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-cassandra (3.11.13) UNRELEASED; urgency=medium
+cassandra (3.11.14) UNRELEASED; urgency=medium
 
   * New release
 
- -- Mick Semb Wever <mck@apache.org>  Mon, 07 Feb 2022 13:55:35 +0100
+ -- Mick Semb Wever <mck@apache.org>  Fri, 06 May 2022 17:04:47 +0200
+
+cassandra (3.11.13) unstable; urgency=medium
+
+  * New release
+
+ -- Mick Semb Wever <mck@apache.org>  Fri, 06 May 2022 17:04:47 +0200
 
 cassandra (3.11.12) unstable; urgency=medium
 
