--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-cassandra (4.0.4) UNRELEASED; urgency=medium
+cassandra (4.0.4) unstable; urgency=medium
 
   * New release
 
- -- Mick Semb Wever <mck@apache.org>  Sun, 13 Feb 2022 22:37:37 +0100
+ -- Mick Semb Wever <mck@apache.org>  Fri, 06 May 2022 18:38:33 +0200
 
 cassandra (4.0.3) unstable; urgency=medium
 
