--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1-alpha2
+ * Remove expired snapshots of dropped tables after restart (CASSANDRA-17619) 
 Merged from 4.0:
  * silence benign SslClosedEngineException (CASSANDRA-17565)
 Merged from 3.11:
