--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-cassandra (4.1~alpha1) UNRELEASED; urgency=medium
+cassandra (4.1~alpha1) unstable; urgency=medium
 
   * New release
 
- -- Mick Semb Wever <mck@apache.org>  Wed, 21 Apr 2021 19:24:28 +0200
+ -- Mick Semb Wever <mck@apache.org>  Fri, 20 May 2022 22:02:50 +0200
 
 cassandra (4.0~rc1) unstable; urgency=medium
 
