--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.2
+ * Change default directory permission to 750 in packaging (CASSANDRA-17470)
  * Adding support for TLS client authentication for internode communication (CASSANDRA-17513)
  * Add new CQL function maxWritetime (CASSANDRA-17425)
  * Add guardrail for ALTER TABLE ADD / DROP / REMOVE column operations (CASSANDRA-17495)
