--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,10 @@
+4.1-alpha2
+Merged from 4.0:
+ * silence benign SslClosedEngineException (CASSANDRA-17565)
+Merged from 3.11:
+Merged from 3.0:
+
+
 4.1-alpha1
  * Handle config parameters upper bound on startup; Fix auto_snapshot_ttl and paxos_purge_grace_period min unit validations (CASSANDRA-17571)
  * Fix leak of non-standard Java types in our Exceptions as clients using JMX are unable to handle them.
@@ -168,7 +175,6 @@
  * GossiperTest.testHasVersion3Nodes didn't take into account trunk version changes, fixed to rely on latest version (CASSANDRA-16651)
  * Update JNA library to 5.9.0 and snappy-java to version 1.1.8.4 (CASSANDRA-17040)
 Merged from 4.0:
- * silence benign SslClosedEngineException (CASSANDRA-17565)
 Merged from 3.11:
 Merged from 3.0:
  * Fix issue where frozen maps may not be serialized in the correct order (CASSANDRA-17623)
