Error while creating hotel.hotels table
line 35 should be ```pois set<text>```

--- a/doc/modules/cassandra/pages/data_modeling/data_modeling_schema.adoc
+++ b/doc/modules/cassandra/pages/data_modeling/data_modeling_schema.adoc
@@ -32,7 +32,7 @@ CREATE TABLE hotel.hotels (
   name text,
   phone text,
   address frozen<address>,
-  pois set )
+  pois set<text> )
   WITH comment = ‘Q2. Find information about a hotel’;
 
 CREATE TABLE hotel.pois_by_hotel (
