Add guardrail for column size
patch by Andrés de la Peña; reviewed by Ekaterina Dimitrova and David Capwell for CASSANDRA-17151

--- a/NEWS.txt
+++ b/NEWS.txt
@@ -73,6 +73,7 @@ New features
       - Whether SimpleStrategy is allowed on keyspace creation or alteration
       - Maximum replication factor
       - Whether DROP KEYSPACE commands are allowed.
+      - Column value size
     - It is possible to list ephemeral snapshots by nodetool listsnaphots command when flag "-e" is specified.
 
 Upgrading
