--- a/doc/modules/cassandra/pages/cql/cql_singlefile.adoc
+++ b/doc/modules/cassandra/pages/cql/cql_singlefile.adoc
@@ -1711,7 +1711,9 @@ to these generic functions, the `WRITETIME` and `MAXWRITETIME` (resp. `TTL`)
 function allows to select the timestamp of when the column was inserted (resp.
 the time to live (in seconds) for the column (or null if the column has
 no expiration set)) and the link:#castFun[`CAST`] function can be used
-to convert one data type to another.
+to convert one data type to another. The `WRITETIME` and `TTL` functions
+can't be used on multi-cell columns such as non-frozen collections or
+non-frozen user-defined types.
 
 Additionally, individual values of maps and sets can be selected using
 `[ <term> ]`. For maps, this will return the value corresponding to the
