--- a/doc/modules/cassandra/pages/cql/dml.adoc
+++ b/doc/modules/cassandra/pages/cql/dml.adoc
@@ -88,6 +88,9 @@ and UDT.
 is equivalent to `WRITETIME`. In the other cases, it returns the largest timestamp of the values in the column.
 * `TTL` stores the remaining time to live (in seconds) for the value of the column if it is set to expire; otherwise the value is `null`.
 
+The `WRITETIME` and `TTL` functions can't be used on multi-cell columns such as non-frozen
+collections or non-frozen user-defined types.
+
 [[where-clause]]
 === The `WHERE` clause
 
