--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1-alpha2
+ * Fix AbstractCell#toString throws MarshalException for cell in collection (CASSANDRA-17695)
  * Add new vtable output option to compactionstats (CASSANDRA-17683)
  * Fix commitLogUpperBound initialization in AbstractMemtableWithCommitlog (CASSANDRA-17587)
  * Fix widening to long in getBatchSizeFailThreshold (CASSANDRA-17650)
