--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,7 @@
  * Add guardrail for ALTER TABLE ADD / DROP / REMOVE column operations (CASSANDRA-17495)
  * Rename DisableFlag class to EnableFlag on guardrails (CASSANDRA-17544)
 Merged from 4.1:
+ * Relax synchronization on StreamSession#onError() to avoid deadlock (CASSANDRA-17706)
  * Fix AbstractCell#toString throws MarshalException for cell in collection (CASSANDRA-17695)
  * Add new vtable output option to compactionstats (CASSANDRA-17683)
  * Fix commitLogUpperBound initialization in AbstractMemtableWithCommitlog (CASSANDRA-17587)
