--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1-alpha2
+ * Relax synchronization on StreamSession#onError() to avoid deadlock (CASSANDRA-17706)
  * Fix AbstractCell#toString throws MarshalException for cell in collection (CASSANDRA-17695)
  * Add new vtable output option to compactionstats (CASSANDRA-17683)
  * Fix commitLogUpperBound initialization in AbstractMemtableWithCommitlog (CASSANDRA-17587)
