--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,5 @@
 4.1-alpha2
+ * min_tracked_partition_size_bytes parameter from 4.1 alpha1 was renamed to min_tracked_partition_size (CASSANDRA-17733)
  * Remove commons-lang dependency during build runtime (CASSANDRA-17724)
  * Relax synchronization on StreamSession#onError() to avoid deadlock (CASSANDRA-17706)
  * Fix AbstractCell#toString throws MarshalException for cell in collection (CASSANDRA-17695)
